--- a/style.css
+++ b/style.css
@@ -1,29 +1,32 @@
-*{
+* {
     box-sizing: border-box;
     font-family: sans-serif;
 }
 
-body{
+body {
     margin: 0;
 }
 
-main{
+main {
     background: grey;
     display: flex;
-    justify-content:center;
+    justify-content: center;
     height: 100vh;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
-.datecontainer{
+.datecontainer {
     border-top: 1rem solid red;
     margin-top: 2rem;
     height: 10rem;
     background: white;
-    width: 10rem;
-padding: 1.5rem;
-padding-top: 0.5rem;
-margin: 1rem;
+    padding: 1.5rem;
+    padding-top: 0.5rem;
+    margin: 1rem;
 
 }
 
-
+p{
+    text-align: center;
+}
