--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ main {
     border-top: 1rem solid red;
     margin-top: 2rem;
     height: 10rem;
+    width: 10rem;
     background: white;
-    padding: 1.5rem;
+    text-align: center;
     padding-top: 0.5rem;
     margin: 1rem;
 
